--- a/web/src/style.css
+++ b/web/src/style.css
@@ -2492,6 +2492,12 @@ th:nth-child(6) {
     /* kleines Schließen-Icon für mobile Ansicht */
     display: none;
 }
+#closeVideoDlgSmall {
+    /* Icon absolut oben rechts im Dialog */
+    position: absolute;
+    top: 4px;
+    right: 4px;
+}
 
 @media (max-width: 600px) {
     /* mobile Ansicht: kleines Icon und kleinere Zeitangabe */
@@ -2741,7 +2747,7 @@ th:nth-child(6) {
 }
 
 /* Ergebnis-Panel fuer die OCR-Ausgabe */
-#ocrResultPanel {
+#ocrOutputSection {
     position: relative;
     width: 100%;
     height: 100%;
@@ -2756,7 +2762,7 @@ th:nth-child(6) {
 
 @media (max-width: 600px) {
     /* Panel rutscht unter das Video, wenn nicht genug Breite vorhanden ist */
-    #ocrResultPanel {
+    #ocrOutputSection {
         position:static;
         width:100%;
         height:auto;
